Mon May 28 14:56:35 BST 2001  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in: Since it isn't sensible to define debug
	  (-d options at run-time do just as well), remove the commented
	  definition.
	* include/manconfig.h.in, src/catman.c, src/check_mandirs.c,
	  src/compression.c, src/man.c, src/mandb.c, src/manpath.c,
	  src/whatis.c: Remove instances of '#ifndef debug'
	* src/util.c: debug is already declared extern in manconfig.h.

Mon May 28 14:30:38 BST 2001  Colin Watson  <cjwatson@debian.org>

	* tools/README: Describe chconfig and install-manpage.
	* man/man5/manpath.man5, docs/ToDo: Document the DEFINE directive.

	* libdb/db_delete.c, libdb/db_lookup.c, libdb/db_store.c,
	  src/whatis.c: Remove redundant strtok() declaration.
	* src/check_mandirs.c: Declare strpbrk().

	* src/*: Global style cleanup. Sorry about the large diff, but it
	  had to happen sometime: I can't stick with the prevailing coding
	  style when there are several to choose from! No meaningful code
	  change, although I disentangled a few assignments from if
	  conditions and rearranged a few other sections.
	* po/*: Update accordingly.

Sun May 27 18:32:41 BST 2001  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4 (MAN_CHECK_BDB): New macro to check for Berkeley DB.
	* configure.in: Use it.

	* src/check_mandirs.c (test_manfile): Be more accurate about finding
	  the " - " at the end of a series of whatis names, and make sure to
	  skip commas between them. Add more commentary.

	* src/man.c (open_cat_stream): Return NULL if the cat page is
	  unwriteable, rather than wasting time compressing to /dev/null.
	  (format_display_and_save): Give up if both outing and saving
	  become false.

Sun May 27 18:00:00 BST 2001  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Preliminary entries for 2.3.19. Add current version
	  number throughout as well as just "Major changes since ...".
	* manual/misc.me (Modes of operation): mandb doesn't necessarily