@@ -12,7 +12,7 @@ dnl
 dnl Define below date and version information to be put into man pages etc.
 dnl
 datemark=20010514
-date=`LANG=C date -d $datemark `
+date=`LANG=C date -d $datemark +'%d %B %Y'`
 date_it=`LANG=it_IT date -d $datemark +'%d %B %Y'`
 date_es=`LANG=es_ES date -d $datemark +'%d %B %Y'`
 date_de=`LANG=de_DE date -d $datemark +'%d %B %Y'`
@@ -46,8 +46,8 @@ AC_ARG_ENABLE(debug,
 [  --enable-debug	  build a Makefile suitable for debugging purposes], 
 	 [: ${LDFLAGS=-g}
 	  MAN_ECHO("Enabling debugging Makefile")
-	  debug=on], 
-	 [: ${CFLAGS=-g -O2} 
+	  debug=on],
+	 [: ${CFLAGS=-g -O2}
 	  : ${LDFLAGS=-s}
 	  : ${LIBS=-lc}
 	  AC_DEFINE(NDEBUG)
